--- a/non_readable_range_analysis.ipynb
+++ b/non_readable_range_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -66,16 +66,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "      <th>20</th>\n",
        "      <th>21</th>\n",
        "      <th>22</th>\n",
        "      <th>23</th>\n",
        "      <th>24</th>\n",
-       "      <th>25</th>\n",
-       "      <th>26</th>\n",
-       "      <th>27</th>\n",
-       "      <th>28</th>\n",
-       "      <th>29</th>\n",
-       "      <th>30</th>\n",
+       "      <th>...</th>\n",
        "      <th>31</th>\n",
        "      <th>32</th>\n",
        "      <th>33</th>\n",
@@ -91,16 +92,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A1BG-201</th>\n",
+       "      <td>274</td>\n",
+       "      <td>116</td>\n",
+       "      <td>46</td>\n",
+       "      <td>22</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -114,16 +116,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A1CF-202</th>\n",
+       "      <td>267</td>\n",
+       "      <td>88</td>\n",
+       "      <td>40</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
        "      <td>8</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -137,16 +140,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A2M-201</th>\n",
+       "      <td>1179</td>\n",
+       "      <td>709</td>\n",
+       "      <td>536</td>\n",
+       "      <td>463</td>\n",
+       "      <td>420</td>\n",
+       "      <td>392</td>\n",
        "      <td>368</td>\n",
        "      <td>349</td>\n",
        "      <td>333</td>\n",
        "      <td>319</td>\n",
-       "      <td>306</td>\n",
-       "      <td>293</td>\n",
-       "      <td>280</td>\n",
-       "      <td>270</td>\n",
-       "      <td>262</td>\n",
-       "      <td>254</td>\n",
+       "      <td>...</td>\n",
        "      <td>246</td>\n",
        "      <td>239</td>\n",
        "      <td>232</td>\n",
@@ -160,16 +164,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A2ML1-201</th>\n",
+       "      <td>665</td>\n",
+       "      <td>214</td>\n",
+       "      <td>73</td>\n",
+       "      <td>21</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -183,16 +188,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A3GALT2-201</th>\n",
+       "      <td>199</td>\n",
+       "      <td>76</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -226,19 +232,21 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZXDC-202</th>\n",
+       "      <td>611</td>\n",
+       "      <td>275</td>\n",
+       "      <td>133</td>\n",
+       "      <td>77</td>\n",
+       "      <td>50</td>\n",
+       "      <td>38</td>\n",
        "      <td>29</td>\n",
        "      <td>21</td>\n",
        "      <td>14</td>\n",
        "      <td>11</td>\n",
-       "      <td>8</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -252,16 +260,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZYG11A-201</th>\n",
+       "      <td>325</td>\n",
+       "      <td>117</td>\n",
+       "      <td>45</td>\n",
+       "      <td>20</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -275,16 +284,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZYG11B-201</th>\n",
+       "      <td>319</td>\n",
+       "      <td>102</td>\n",
+       "      <td>29</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -298,16 +308,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZYX-201</th>\n",
+       "      <td>383</td>\n",
+       "      <td>153</td>\n",
+       "      <td>52</td>\n",
+       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -321,16 +332,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZZEF1-201</th>\n",
+       "      <td>1570</td>\n",
+       "      <td>527</td>\n",
+       "      <td>181</td>\n",
+       "      <td>59</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -344,40 +356,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19736 rows × 20 columns</p>\n",
+       "<p>19736 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              21   22   23   24   25   26   27   28   29   30   31   32   33  \\\n",
-       "A1BG-201       0    0    0    0    0    0    0    0    0    0    0    0    0   \n",
-       "A1CF-202       8    5    3    1    0    0    0    0    0    0    0    0    0   \n",
-       "A2M-201      368  349  333  319  306  293  280  270  262  254  246  239  232   \n",
-       "A2ML1-201      0    0    0    0    0    0    0    0    0    0    0    0    0   \n",
-       "A3GALT2-201    0    0    0    0    0    0    0    0    0    0    0    0    0   \n",
-       "...          ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
-       "ZXDC-202      29   21   14   11    8    5    3    2    1    0    0    0    0   \n",
-       "ZYG11A-201     6    3    0    0    0    0    0    0    0    0    0    0    0   \n",
-       "ZYG11B-201     2    1    0    0    0    0    0    0    0    0    0    0    0   \n",
-       "ZYX-201        3    2    1    0    0    0    0    0    0    0    0    0    0   \n",
-       "ZZEF1-201      1    0    0    0    0    0    0    0    0    0    0    0    0   \n",
+       "               15   16   17   18   19   20   21   22   23   24  ...   31   32  \\\n",
+       "A1BG-201      274  116   46   22    8    3    0    0    0    0  ...    0    0   \n",
+       "A1CF-202      267   88   40   22   15   11    8    5    3    1  ...    0    0   \n",
+       "A2M-201      1179  709  536  463  420  392  368  349  333  319  ...  246  239   \n",
+       "A2ML1-201     665  214   73   21    5    0    0    0    0    0  ...    0    0   \n",
+       "A3GALT2-201   199   76   25    7    3    1    0    0    0    0  ...    0    0   \n",
+       "...           ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
+       "ZXDC-202      611  275  133   77   50   38   29   21   14   11  ...    0    0   \n",
+       "ZYG11A-201    325  117   45   20   13    9    6    3    0    0  ...    0    0   \n",
+       "ZYG11B-201    319  102   29    8    4    3    2    1    0    0  ...    0    0   \n",
+       "ZYX-201       383  153   52   17   11    6    3    2    1    0  ...    0    0   \n",
+       "ZZEF1-201    1570  527  181   59   17    3    1    0    0    0  ...    0    0   \n",
        "\n",
-       "              34   35   36   37   38   39   40  \n",
-       "A1BG-201       0    0    0    0    0    0    0  \n",
-       "A1CF-202       0    0    0    0    0    0    0  \n",
-       "A2M-201      225  218  211  204  197  190  183  \n",
-       "A2ML1-201      0    0    0    0    0    0    0  \n",
-       "A3GALT2-201    0    0    0    0    0    0    0  \n",
-       "...          ...  ...  ...  ...  ...  ...  ...  \n",
-       "ZXDC-202       0    0    0    0    0    0    0  \n",
-       "ZYG11A-201     0    0    0    0    0    0    0  \n",
-       "ZYG11B-201     0    0    0    0    0    0    0  \n",
-       "ZYX-201        0    0    0    0    0    0    0  \n",
-       "ZZEF1-201      0    0    0    0    0    0    0  \n",
+       "              33   34   35   36   37   38   39   40  \n",
+       "A1BG-201       0    0    0    0    0    0    0    0  \n",
+       "A1CF-202       0    0    0    0    0    0    0    0  \n",
+       "A2M-201      232  225  218  211  204  197  190  183  \n",
+       "A2ML1-201      0    0    0    0    0    0    0    0  \n",
+       "A3GALT2-201    0    0    0    0    0    0    0    0  \n",
+       "...          ...  ...  ...  ...  ...  ...  ...  ...  \n",
+       "ZXDC-202       0    0    0    0    0    0    0    0  \n",
+       "ZYG11A-201     0    0    0    0    0    0    0    0  \n",
+       "ZYG11B-201     0    0    0    0    0    0    0    0  \n",
+       "ZYX-201        0    0    0    0    0    0    0    0  \n",
+       "ZZEF1-201      0    0    0    0    0    0    0    0  \n",
        "\n",
-       "[19736 rows x 20 columns]"
+       "[19736 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +458,7 @@
        "0.719041345764086"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +479,7 @@
        "0.8362383461694366"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +500,7 @@
        "0.09282529387920552"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
